--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 * {
   margin: 0;
+  box-sizing: border-box;
+}
+
+/* General Rules */
+
+a {
+  transition: color 0.3s;
+  background-color: transparent;
+}
+
+ul {
+  list-style: none;
 }
