--- a/src/App.css
+++ b/src/App.css
@@ -115,9 +115,9 @@ ul {
   font-size: 38px;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 700;
-  /* color: #fff; */
+  color: #fff;
   margin: 0;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 @keyframes c-inline-spinner-kf {
@@ -157,28 +157,6 @@ ul {
   border-style: solid;
 }
 
-.bootstrap__container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-@media (min-width: 768px) {
-  .bootstrap__container {
-    width: 750px;
-  }
-}
-@media (min-width: 992px) {
-  .bootstrap__container {
-    width: 970px;
-  }
-}
-@media (min-width: 1200px) {
-  .bootstrap__container {
-    width: 1170px;
-  }
-}
-
 .pr-row {
   margin-left: -15px;
   margin-right: -15px;
@@ -211,12 +189,64 @@ ul {
   clear: both;
 }
 
-@media (min-width: 1200px) .pr-container {
-  width: 1200px;
+@media screen and (max-width: 1200px) {
+  .pr-container {
+    width: 1200px;
+  }
 }
-@media (min-width: 992px) .pr-container {
-  width: 970px;
+
+@media screen and (max-width: 992px) {
+  .pr-container {
+    width: 970px;
+  }
 }
-@media (min-width: 768px) .pr-container {
-  width: 750px;
+
+@media screen and (max-width: 768px) {
+  .pr-container {
+    width: 750px;
+  }
 }
+
+.debug__container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.debug__row {
+  margin: 4em 20px;
+}
+
+.bootstrap__container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 768px) {
+  .bootstrap__container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .bootstrap__container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .bootstrap__container {
+    width: 1170px;
+  }
+}
+
+/* @media (min-width: 768px) {
+  .col-md-3 {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+
+  .col-md-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+} */
